--- a/src/index.css
+++ b/src/index.css
@@ -2,14 +2,48 @@
 
 body {
   margin: 0;
+  /* max-width: 100%; */
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
+    background-image: linear-gradient(rgba(243, 112, 112, 0.5), rgba(245, 248, 63, 0.5));
+  /* , url(./components/Icons/smartphone.jpg); */
+  background-size: cover;
+  background-repeat: no-repeat;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+
+  
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+/* .container {
+  background-image: linear-gradient(rgba(243, 112, 112, 0.5), rgba(245, 248, 63, 0.5));
+  background-size: cover;
+  background-repeat: no-repeat;
+  outline: 4px solid green;
+} */
+/* 
+button {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 8px;
+  margin: 19px 0px;
+  border-bottom: 3px solid grey;
+  border-radius: 10px;
+  text-decoration: none;
+  color: #c06792;
+  font-weight: 700;
+} */
+
+/* button:hover,
+button:active {
+  color: white;
+  background-color: #ca99b9;
+  transform: scale(1.2);
+} */
