--- a/src/components/AppBar/AppBar.module.css
+++ b/src/components/AppBar/AppBar.module.css
@@ -1,4 +1,5 @@
 .header {
+    /* position: fixed; */
     background: linear-gradient(217deg, rgba(245, 104, 104, 0.8), rgba(224, 177, 133, 0) 70.71%),
     linear-gradient(127deg, rgba(241, 151, 33, 0.8), rgba(252, 235, 5, 0) 70.71%),
     linear-gradient(336deg, rgba(230, 150, 104, 0.8), rgba(235, 111, 73, 0) 70.71%);
