--- a/src/components/Layout/Layout.module.css
+++ b/src/components/Layout/Layout.module.css
@@ -1,6 +1,4 @@
 .header {
-    background-color: rgb(228, 190, 208);
-    box-shadow: 20px 20px 20px 20px #ca99b2;
     border-radius: 8px;
     width: 100%;
     height: 70px;
@@ -17,8 +15,8 @@
 }
 
 .header-nav {
-    background-color: rgb(228, 190, 208);
-    box-shadow: 20px 20px 20px 20px #ca99b2;
+    /* background-color: rgb(228, 190, 208);
+    box-shadow: 20px 20px 20px 20px #ca99b2; */
     border-radius: 8px;
     width: 100%;
     height: 70px;
