--- a/src/components/LoginForm/LoginForm.module.css
+++ b/src/components/LoginForm/LoginForm.module.css
@@ -1,12 +1,16 @@
 .form {
     width: 320px;
-    margin-left: 20px;
+    /* margin-left: 20px; */
+    margin-left: auto;
+    margin-right: auto;
   }
   
   .label {
     display: flex;
     flex-direction: column;
-    margin: 16px 0px;
+    /* text-align: left; */
+    margin: 20px 0px;
+    /* gap: 15px; */
     color: rgba(133, 4, 21, 0.8);
   }
 
@@ -17,7 +21,7 @@
     margin-top: 5px;
     border-radius: 25%;
     border: solid 2px rgb(243, 147, 2);
-    font-size: 10px;
+    font-size: 15px;
     padding: 8px 8px 8px 2px;
     align-items: center;
     background-color: rgba(245, 98, 142, 0.5);
