--- a/src/components/RegisterForm/RegisterForm.module.css
+++ b/src/components/RegisterForm/RegisterForm.module.css
@@ -1,13 +1,15 @@
 .form {
   width: 320px;
-  max-height: 100%;
-  margin-left: 20px;
+  /* max-height: 100%; */
+  /* margin-left: 20px; */
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .label {
   display: flex;
   flex-direction: column;
-  margin: 16px 0px;
+  margin: 20px 0px;
   color: rgba(133, 4, 21, 0.8);
   /* text-align: left; */
 }
@@ -19,7 +21,7 @@
   margin-top: 5px;
   border-radius: 25%;
   border: solid 2px rgb(243, 147, 2);
-  font-size: 10px;
+  font-size: 15px;
   padding: 8px 8px 8px 2px;
   align-items: center;
   background-color: rgba(245, 98, 142, 0.5);
