--- a/src/pages/Home.module.css
+++ b/src/pages/Home.module.css
@@ -3,16 +3,19 @@
         /* maxWidth: 960, margin: '0 auto', padding: '0 16px' */
 
         min-width: 1000px;
-        max-height: auto;
+        /* max-height: auto; */
         /* margin: 0px auto; */
         /* margin-right: 0px; */
         margin-left: 20px;
         display: flex;
-        min-height: calc(100vh - 50px);
+        min-height: 100vh;
+        /* min-height: calc(100vh - 50px); */
         justify-content: center;
         background-image: linear-gradient(rgba(243, 112, 112, 0.5), rgba(245, 248, 63, 0.5)), 
         url(../components/Icons/smartphone.jpg); 
         background-size: cover;
+        /* background-size: 100%;
+        background-repeat: no-repeat; */
         /* outline: solid 3px green; */
         /* margin-top: -50px; */
         /* background-size: 150%; */
